feat(auth): localize error messages in SignInForm and update validation logic
feat(user-management): add property unit, nationality, and phone number fields to UserModal

feat(locales): add error messages for required fields, invalid credentials, and role mismatch in English, Japanese, and Vietnamese

feat(types): extend User type to include propertyUnitId for user management

docs: add guide for seeding users data and modifying users table structure

feat(sql): add SQL script to modify users table by adding new columns for user management

chore(scripts): create scripts to check and update user roles and passwords in Supabase

refactor: implement short ID generation for users and update related scripts

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -219,7 +219,12 @@
       "forgotPassword": "Forgot password?",
       "signIn": "Sign in",
       "loggingIn": "Logging in...",
-      "dontHaveAccount": "Don't have an account?"
+      "dontHaveAccount": "Don't have an account?",
+      "errors": {
+        "requiredFields": "Please enter both email and password",
+        "invalidCredentials": "Invalid email or password. Please try again.",
+        "roleMismatch": "This account belongs to the \"{userRole}\" role, but you selected the \"{selectedRole}\" role. Please go back and select the correct role or sign in with a different account."
+      }
     }
   },
   "dev": {
