feat(buildings): enhance modal UI for BuildingCategory and PropertyUnit with improved styling and layout feat(locales): add loading menu message in English, Japanese, and Vietnamese translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -219,6 +219,7 @@
       "forgotPassword": "Forgot password?",
       "signIn": "Sign in",
       "loggingIn": "Logging in...",
+      "loadingMenu": "Smart menu configuration in progress…",
       "dontHaveAccount": "Don't have an account?",
       "errors": {
         "requiredFields": "Please enter both email and password",
